--- a/2024/2024.ipynb
+++ b/2024/2024.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1487,7 +1487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 241,
    "metadata": {},
    "outputs": [
     {
@@ -1496,14 +1496,14 @@
        "66055249060558"
       ]
      },
-     "execution_count": 200,
+     "execution_count": 241,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "def day24():\n",
-    "    text = data(24)\n",
+    "    text = data('24')\n",
     "    split = text.index('')\n",
     "    vals = {y[0]:int(y[1]) for y in (x.split(': ') for x in text[:split])}\n",
     "\n",
@@ -1564,23 +1564,386 @@
     "    xs = bits('x', values)\n",
     "    ys = bits('y', values)\n",
     "    noswap = apply(start.copy(), values, {})\n",
-    "    expected = target_fn(xs, ys)\n",
     "    return int(noswap, 2)\n",
     "\n",
-    "day24()\n",
-    "\n",
-    "# Skip part 2 for now\n",
-    "# 1. generate test cases\n",
-    "# 2. generate potentially relevant swaps\n",
-    "# 3. figure out which swaps improve on test case\n",
-    "# 4. recurse"
+    "day24()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 242,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'cfr',\n",
+       " 'dkb',\n",
+       " 'dtn',\n",
+       " 'fnj',\n",
+       " 'ggw',\n",
+       " 'kkp',\n",
+       " 'ksv',\n",
+       " 'mfv',\n",
+       " 'mgm',\n",
+       " 'ntn',\n",
+       " 'pbf',\n",
+       " 'qwr',\n",
+       " 'rmv',\n",
+       " 'rvf',\n",
+       " 'scf',\n",
+       " 'tpc',\n",
+       " 'trg',\n",
+       " 'ttw',\n",
+       " 'wsm',\n",
+       " 'z26',\n",
+       " 'z27',\n",
+       " 'z28',\n",
+       " 'z29'}"
+      ]
+     },
+     "execution_count": 242,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "text = data(24)\n",
+    "split = text.index('')\n",
+    "vals = {y[0]:int(y[1]) for y in (x.split(': ') for x in text[:split])}\n",
+    "\n",
+    "def bits(l, values):\n",
+    "    return ''.join((str(values[k])) for k in (sorted([x for x in values if x.startswith(l)], reverse=True)))\n",
+    "\n",
+    "class Gate:\n",
+    "    def __init__(self, text):\n",
+    "        self.a, self.op, self.b, self.c = text\n",
+    "        self.children = set()\n",
+    "    def add_child(self, child):\n",
+    "        self.children.add(child)\n",
+    "    def __repr__(self):\n",
+    "        return f'{self.a} {self.op} {self.b} -> {self.c}'\n",
+    "\n",
+    "gates = {gate.c:gate for gate in (Gate(re.findall(r'(...) (AND|OR|XOR) (...) -> (...)', x)[0]) for x in text[split+1:])}    \n",
+    "start = deque()\n",
+    "for c in gates:\n",
+    "    gate = gates[c]            \n",
+    "    if gate.a[0] in ('x', 'y') and gate.b[0] in ('x', 'y'):\n",
+    "        start.append(c)\n",
+    "    if gate.a in gates:\n",
+    "        gates[gate.a].add_child(gate)\n",
+    "    if gate.b in gates:\n",
+    "        gates[gate.b].add_child(gate)\n",
+    "\n",
+    "def target_fn(xs, ys, fill=46):\n",
+    "    part = int(xs, 2) + int(ys, 2)\n",
+    "    return str(bin(part))[2:].zfill(fill)\n",
+    "\n",
+    "def test_cases(n):\n",
+    "    for i in range(n):\n",
+    "        test = vals.copy()\n",
+    "        for i in test:\n",
+    "            test[i] = random.randint(0,1)\n",
+    "        yield test\n",
+    "\n",
+    "def relevant(n):\n",
+    "    touched = set()\n",
+    "\n",
+    "    def interesting(a, targets):\n",
+    "        return any(t in a for t in targets)\n",
+    "\n",
+    "    visited = set()\n",
+    "    def touch(t):\n",
+    "        for c in gates:\n",
+    "            if c in visited:\n",
+    "                continue\n",
+    "            gate = gates[c]\n",
+    "            a, op, b = gate.a, gate.op, gate.b\n",
+    "            if interesting(a, t) or interesting(b, t) or interesting(c, t):\n",
+    "                visited.add(gate)\n",
+    "                touched.add(a)\n",
+    "                touched.add(b)\n",
+    "                touched.add(c)\n",
+    "    \n",
+    "    touch([str(i).zfill(2) for i in range(n-1, n+2)])\n",
+    "    touch(list(touched))\n",
+    "    touch(list(touched))\n",
+    "    \n",
+    "    for i in touched.copy():\n",
+    "        if i.startswith('x') or i.startswith('y'):\n",
+    "            touched.remove(i)\n",
+    "\n",
+    "    return touched\n",
+    "\n",
+    "relevant(27)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 252,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16 2 {'nrf': 'z16', 'z16': 'nrf'}\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "(['0', '1', '1', '1', '0', '0', '1', '1', '0', '1', '0', '0', '0', '1', '1', '1', '0', '1'], ['0', '1', '1', '1', '0', '0', '1', '1', '0', '1', '0', '0', '0', '1', '1', '1', '0', '0'])",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[252], line 57\u001b[0m\n\u001b[0;32m     53\u001b[0m     \u001b[38;5;28mprint\u001b[39m(acc)\n\u001b[0;32m     55\u001b[0m     \u001b[38;5;66;03m# return int(noswap, 2)\u001b[39;00m\n\u001b[1;32m---> 57\u001b[0m \u001b[43mday24\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[252], line 52\u001b[0m, in \u001b[0;36mday24\u001b[1;34m()\u001b[0m\n\u001b[0;32m     50\u001b[0m                 \u001b[38;5;28;01mbreak\u001b[39;00m\n\u001b[0;32m     51\u001b[0m         \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m---> 52\u001b[0m             \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(test)\n\u001b[0;32m     53\u001b[0m \u001b[38;5;28mprint\u001b[39m(acc)\n",
+      "\u001b[1;31mValueError\u001b[0m: (['0', '1', '1', '1', '0', '0', '1', '1', '0', '1', '0', '0', '0', '1', '1', '1', '0', '1'], ['0', '1', '1', '1', '0', '0', '1', '1', '0', '1', '0', '0', '0', '1', '1', '1', '0', '0'])"
+     ]
+    }
+   ],
+   "source": [
+    "def day24():   \n",
+    "    acc = {}\n",
+    "\n",
+    "    def apply(q, values, swaps):\n",
+    "        def run(c):\n",
+    "            gate = gates[c]\n",
+    "            a, op, b = gate.a, gate.op, gate.b\n",
+    "            match op:\n",
+    "                case 'AND':\n",
+    "                    result = values[a] and values[b]\n",
+    "                case 'OR':\n",
+    "                    result = values[a] or values[b]\n",
+    "                case 'XOR':\n",
+    "                    result = values[a] ^ values[b]\n",
+    "            c = swaps.get(c, c)\n",
+    "            values[c] = result\n",
+    "            return gates[c]\n",
+    "\n",
+    "        visited = set()\n",
+    "        while q:\n",
+    "            c = q.popleft()\n",
+    "            visited.add(c)\n",
+    "            gate = run(c)\n",
+    "            for child in gate.children:\n",
+    "                if child.a in values and child.b in values:\n",
+    "                    if child.c not in visited:\n",
+    "                        q.append(child.c)\n",
+    "        return bits('z', values)\n",
+    "\n",
+    "    cases = [vals.copy()] + list(test_cases(5))\n",
+    "    def check(swaps, debug=False):\n",
+    "        for i, values in enumerate(cases):\n",
+    "            xs = bits('x', values)\n",
+    "            ys = bits('y', values)\n",
+    "            calculated = list(reversed(apply(start.copy(), values.copy(), swaps)))[:n+1]\n",
+    "            expected = list(reversed(target_fn(xs, ys)))[:n+1]\n",
+    "            if calculated != expected:\n",
+    "                return (calculated, expected)\n",
+    "        return False      \n",
+    "        \n",
+    "    for n in range(16, 45):\n",
+    "        if check(acc.copy()):\n",
+    "            nodes = relevant(n)\n",
+    "            for a, b in reversed(list(itertools.combinations(nodes, 2))):\n",
+    "                swaps = acc.copy()\n",
+    "                swaps[a], swaps[b] = b, a\n",
+    "                if not (test := check(swaps, n==27)):\n",
+    "                    acc = swaps\n",
+    "                    print(n, len(acc), acc)\n",
+    "                    break\n",
+    "            else:\n",
+    "                raise ValueError(test)\n",
+    "    print(acc)\n",
+    "\n",
+    "    # return int(noswap, 2)\n",
+    "\n",
+    "day24()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 222,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'fcd,fhp,hmk,rvf,tpc,z16,z20,z33'"
+      ]
+     },
+     "execution_count": 222,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = {'hmk': 'z16', 'z16': 'hmk', 'fhp': 'z20', 'z20': 'fhp', 'tpc': 'rvf', 'rvf': 'tpc', 'z33': 'fcd', 'fcd': 'z33'}\n",
+    "','.join(sorted(a.keys()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 177,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "qwr --> XOR0 --> z26\n",
+      "pbf --> XOR0\n",
+      "y26 --> AND0 --> ttw\n",
+      "x26 --> AND0\n",
+      "y26 --> XOR1 --> qwr\n",
+      "x26 --> XOR1\n",
+      "x27 --> AND1 --> rvf\n",
+      "y27 --> AND1\n",
+      "rvf --> XOR2 --> z27\n",
+      "dkb --> XOR2\n",
+      "y27 --> XOR3 --> tpc\n",
+      "x27 --> XOR3\n",
+      "y28 --> XOR4 --> dtn\n",
+      "x28 --> XOR4\n",
+      "dtn --> XOR5 --> z28\n",
+      "ntn --> XOR5\n",
+      "x28 --> AND2 --> fnj\n",
+      "y28 --> AND2\n",
+      "y29 --> XOR6 --> scf\n",
+      "x29 --> XOR6\n",
+      "scf --> XOR7 --> z29\n",
+      "ksv --> XOR7\n",
+      "x29 --> AND3 --> pgp\n",
+      "y29 --> AND3\n",
+      "x30 --> AND4 --> ttv\n",
+      "y30 --> AND4\n",
+      "tmq --> XOR8 --> z30\n",
+      "fmg --> XOR8\n",
+      "y30 --> XOR9 --> fmg\n",
+      "x30 --> XOR9\n",
+      "hbc --> XOR10 --> z31\n",
+      "hnr --> XOR10\n",
+      "x31 --> AND5 --> dhq\n",
+      "y31 --> AND5\n",
+      "y31 --> XOR11 --> hbc\n",
+      "x31 --> XOR11\n",
+      "x32 --> AND6 --> bmh\n",
+      "y32 --> AND6\n",
+      "x32 --> XOR12 --> hhc\n",
+      "y32 --> XOR12\n",
+      "hhc --> XOR13 --> z32\n",
+      "knm --> XOR13\n",
+      "wkw --> OR0 --> z33\n",
+      "jgr --> OR0\n",
+      "x33 --> XOR14 --> smf\n",
+      "y33 --> XOR14\n",
+      "x33 --> AND7 --> wkw\n",
+      "y33 --> AND7\n",
+      "x34 --> XOR15 --> mgc\n",
+      "y34 --> XOR15\n",
+      "x34 --> AND8 --> ccs\n",
+      "y34 --> AND8\n",
+      "fcd --> XOR16 --> z34\n",
+      "mgc --> XOR16\n",
+      "fcd --> AND9 --> qck\n",
+      "mgc --> AND9\n",
+      "hhc --> AND10 --> stm\n",
+      "knm --> AND10\n",
+      "smf --> XOR17 --> fcd\n",
+      "rfd --> XOR17\n",
+      "ntn --> AND11 --> wsm\n",
+      "dtn --> AND11\n",
+      "hbc --> AND12 --> qvp\n",
+      "hnr --> AND12\n",
+      "ttw --> OR1 --> dkb\n",
+      "ggw --> OR1\n",
+      "qvp --> OR2 --> knm\n",
+      "dhq --> OR2\n",
+      "fnj --> OR3 --> ksv\n",
+      "wsm --> OR3\n",
+      "pgp --> OR4 --> tmq\n",
+      "mfv --> OR4\n",
+      "tpc --> OR5 --> ntn\n",
+      "rmv --> OR5\n",
+      "rfd --> AND13 --> jgr\n",
+      "smf --> AND13\n",
+      "trg --> OR6 --> pbf\n",
+      "kkp --> OR6\n",
+      "bmh --> OR7 --> rfd\n",
+      "stm --> OR7\n",
+      "pbf --> AND14 --> ggw\n",
+      "qwr --> AND14\n",
+      "scf --> AND15 --> mfv\n",
+      "ksv --> AND15\n",
+      "ccs --> OR8 --> bjg\n",
+      "qck --> OR8\n",
+      "dkb --> AND16 --> rmv\n",
+      "rvf --> AND16\n",
+      "tmq --> AND17 --> mbp\n",
+      "fmg --> AND17\n",
+      "ttv --> OR9 --> hnr\n",
+      "mbp --> OR9\n"
+     ]
+    }
+   ],
+   "source": [
+    "def day24():\n",
+    "    text = data('24')\n",
+    "    split = text.index('')\n",
+    "\n",
+    "# z16,vmr\n",
+    "# z20,fhp\n",
+    "# z27 (tpc,rvf)\n",
+    "# z33,fcd\n",
+    "\n",
+    "    def interesting(a, targets):\n",
+    "        return any(t in a for t in targets)\n",
+    "\n",
+    "    counts = Counter()\n",
+    "    gates = {re.findall(r'(...) (AND|OR|XOR) (...) -> (...)', x)[0] for x in text[split+1:]}\n",
+    "\n",
+    "\n",
+    "    def print_gates(t):\n",
+    "        for gate in gates:\n",
+    "            if gate in printed:\n",
+    "                continue\n",
+    "            a, op, b, c = gate\n",
+    "            if interesting(a, t) or interesting(b, t) or interesting(c, t):\n",
+    "                print(f'{a} --> {op}{counts[op]} --> {c}')\n",
+    "                print(f'{b} --> {op}{counts[op]}')\n",
+    "                counts[op] += 1\n",
+    "                printed.add(gate)\n",
+    "                touched.add(a)\n",
+    "                touched.add(b)\n",
+    "                touched.add(c)\n",
+    "    \n",
+    "    printed = set()\n",
+    "    touched = set()\n",
+    "    for i in range(26, 35):\n",
+    "        t = [str(i).zfill(2)]\n",
+    "        print_gates(t)\n",
+    "    print_gates(list(touched))\n",
+    "    # print(len(touched), touched)\n",
+    "\n",
+    "\n",
+    "day24()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 201,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['x00: 0', 'x01: 1', 'x02: 0', 'x03: 1', 'x04: 0', 'x05: 1', 'y00: 0', 'y01: 0', 'y02: 1', 'y03: 1', 'y04: 0', 'y05: 1', '', 'x00 AND y00 -> z05', 'x01 AND y01 -> z02', 'x02 AND y02 -> z01', 'x03 AND y03 -> z03', 'x04 AND y04 -> z04', 'x05 AND y05 -> z00']\n"
+     ]
+    }
+   ],
    "source": [
     "def day25():\n",
     "    text = data(0)\n",
