--- a/2024/2024.ipynb
+++ b/2024/2024.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1625,21 +1625,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['x00: 0', 'x01: 1', 'x02: 0', 'x03: 1', 'x04: 0', 'x05: 1', 'y00: 0', 'y01: 0', 'y02: 1', 'y03: 1', 'y04: 0', 'y05: 1', '', 'x00 AND y00 -> z05', 'x01 AND y01 -> z02', 'x02 AND y02 -> z01', 'x03 AND y03 -> z03', 'x04 AND y04 -> z04', 'x05 AND y05 -> z00']\n"
-     ]
+     "data": {
+      "text/plain": [
+       "2835"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "def day25():\n",
-    "    text = data(0)\n",
-    "    print(text)\n",
+    "    text = data(25, list)\n",
+    "\n",
+    "    def process_text(text):\n",
+    "        if [] not in text:\n",
+    "            return np.array(text), []\n",
+    "        idx = text.index([])\n",
+    "        field = np.array(text[:idx])\n",
+    "        return field, text[idx+1:]\n",
+    "    \n",
+    "    key=lambda x: x[1]\n",
+    "    def process_item(item):\n",
+    "        counts = Counter()\n",
+    "        key_lock = Counter()\n",
+    "        args = np.argwhere(item == '#')\n",
+    "        for i in itertools.groupby(sorted(args, key=key), key):\n",
+    "            col = list(i[1])\n",
+    "            key_lock[int(col[0][0])] += 1\n",
+    "            key_lock[int(col[-1][0])] += 1\n",
+    "            counts[int(col[0][1])] = len(col)\n",
+    "        return counts, key_lock[0] > key_lock[5]\n",
+    "\n",
+    "    keys, locks = [], []\n",
+    "    while text:\n",
+    "        item, text = process_text(text)\n",
+    "        counts, is_lock = process_item(item)\n",
+    "        (locks if is_lock else keys).append(counts)\n",
+    "\n",
+    "    def fits(k, l):\n",
+    "        for i in range(5):\n",
+    "            if k[i] + l[i] > 7:\n",
+    "                return False\n",
+    "        return True\n",
+    "\n",
+    "    result = 0\n",
+    "    for k, l in itertools.product(keys, locks):\n",
+    "        if fits(k, l):\n",
+    "            result += 1\n",
+    "    return result\n",
+    "\n",
     "day25()"
    ]
   }
