--- a/2024/2024.ipynb
+++ b/2024/2024.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
        "(1941353, 22539317)"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +124,7 @@
        "array([356, 413])"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
        "(182780583, 90772405)"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
        "(2599, 1948)"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +283,7 @@
        "(6041, 4884)"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +336,7 @@
        "(4374, 1705)"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +423,7 @@
        "(7710205485870, 20928985450275)"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -459,7 +459,7 @@
        "(261, 898)"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -495,16 +495,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(6349606724455, 6376648986651)"
+       "(6349708520387, 6376759538287)"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +592,7 @@
        "(737, 1619)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -634,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -643,7 +643,7 @@
        "(186424, 219838428124832)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -696,7 +696,7 @@
        "(1473276, 901100)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -756,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -765,7 +765,7 @@
        "(36758, 76358113886726)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -806,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -815,7 +815,7 @@
        "(231852216, 8159)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -859,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -868,7 +868,7 @@
        "(1442192, 1448458)"
       ]
      },
-     "execution_count": 189,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -948,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -957,7 +957,7 @@
        "(85480, 518)"
       ]
      },
-     "execution_count": 402,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1015,7 +1015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -1024,7 +1024,7 @@
        "('6,0,6,3,0,2,3,1,6', 236539226447469)"
       ]
      },
-     "execution_count": 195,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1096,7 +1096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -1105,7 +1105,7 @@
        "(268, '64,11')"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1159,7 +1159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -1168,7 +1168,7 @@
        "(317, 883443544805484)"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1197,7 +1197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -1206,7 +1206,7 @@
        "(1404, 1010981)"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1262,7 +1262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -1271,7 +1271,7 @@
        "(248108, 303836969158972)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1352,7 +1352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -1362,56 +1362,6 @@
       ]
      },
      "execution_count": 93,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# slow: 20s\n",
-    "def day22():\n",
-    "    starts = data(22, int)\n",
-    "\n",
-    "    def mixprune(n, s):\n",
-    "        return (n^s)%16777216\n",
-    "    def process(s):\n",
-    "        s = mixprune(s, s*64)\n",
-    "        s = mixprune(s, int(s/32))\n",
-    "        return mixprune(s, s*2048)\n",
-    "    def run(s, n):\n",
-    "        for _ in range(n):\n",
-    "            s = process(s)\n",
-    "            yield s%10\n",
-    "        yield s\n",
-    "\n",
-    "    final, c = 0, Counter()\n",
-    "    for start in starts:\n",
-    "        values = {}\n",
-    "        *prices, last = np.array(list(run(start, 2000)))\n",
-    "        final += last\n",
-    "        for i,v in enumerate(np.lib.stride_tricks.sliding_window_view(np.diff(prices), 4)):\n",
-    "            key = tuple(v)\n",
-    "            if key not in values:\n",
-    "                values[key] = prices[i+4]\n",
-    "        c += values\n",
-    "    key = max(c, key=c.get)\n",
-    "    return int(final), int(c[key])\n",
-    "\n",
-    "\n",
-    "day22()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(18317943467, 2018)"
-      ]
-     },
-     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1453,7 +1403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -1462,7 +1412,7 @@
        "(1083, 'as,bu,cp,dj,ez,fd,hu,it,kj,nx,pp,xh,yu')"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1486,7 +1436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1495,13 +1445,13 @@
        "(66055249060558, 'fcd,fhp,hmk,rvf,tpc,z16,z20,z33')"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from data.day24_cases import test_cases\n",
+    "from outputs.day24_cases import test_cases\n",
     "\n",
     "def day24():   \n",
     "    text = data(24)\n",
@@ -1625,7 +1575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -1634,7 +1584,7 @@
        "2835"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1652,8 +1602,7 @@
     "    \n",
     "    key=lambda x: x[1]\n",
     "    def process_item(item):\n",
-    "        counts = Counter()\n",
-    "        key_lock = Counter()\n",
+    "        counts, key_lock = Counter(),Counter()\n",
     "        args = np.argwhere(item == '#')\n",
     "        for i in itertools.groupby(sorted(args, key=key), key):\n",
     "            col = list(i[1])\n",
@@ -1674,11 +1623,7 @@
     "                return False\n",
     "        return True\n",
     "\n",
-    "    result = 0\n",
-    "    for k, l in itertools.product(keys, locks):\n",
-    "        if fits(k, l):\n",
-    "            result += 1\n",
-    "    return result\n",
+    "    return sum(fits(k, l) for k, l in itertools.product(keys, locks))\n",
     "\n",
     "day25()"
    ]
