--- a/2025/2025.ipynb
+++ b/2025/2025.ipynb
@@ -34,12 +34,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
+   "id": "6ed90fb9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1034\n"
+     ]
+    }
+   ],
+   "source": [
+    "instructions = data(1, lambda x: (x[0], int(x[1:])))\n",
+    "position, count = 50, 0\n",
+    "for i, v in instructions:\n",
+    "    position += v if i == 'R' else -v\n",
+    "    position %= 100\n",
+    "    if not position:\n",
+    "        count += 1\n",
+    "    # print(position, count)\n",
+    "print(count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "8b20513f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6166\n"
+     ]
+    }
+   ],
+   "source": [
+    "instructions = data(1, lambda x: (x[0], int(x[1:])))\n",
+    "previous, position, count = 50, 50, 0\n",
+    "for i, v in instructions:\n",
+    "    count += v//100\n",
+    "    v = v%100\n",
+    "    position = previous + (v if i == 'R' else -v)\n",
+    "    if position >= 100 or (position <= 0 and previous):\n",
+    "        count += 1\n",
+    "    # print(i, v, previous, position, count)\n",
+    "    previous = position%100\n",
+    "print(count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "f41c836f",
    "metadata": {},
    "outputs": [],
    "source": [
     "def day1():\n",
+    "    \n",
     "    return"
    ]
   }
