--- a/2025/2025.ipynb
+++ b/2025/2025.ipynb
@@ -34,68 +34,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "6ed90fb9",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1034\n"
-     ]
-    }
-   ],
-   "source": [
-    "instructions = data(1, lambda x: (x[0], int(x[1:])))\n",
-    "position, count = 50, 0\n",
-    "for i, v in instructions:\n",
-    "    position += v if i == 'R' else -v\n",
-    "    position %= 100\n",
-    "    if not position:\n",
-    "        count += 1\n",
-    "    # print(position, count)\n",
-    "print(count)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "id": "8b20513f",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "6166\n"
-     ]
-    }
-   ],
-   "source": [
-    "instructions = data(1, lambda x: (x[0], int(x[1:])))\n",
-    "previous, position, count = 50, 50, 0\n",
-    "for i, v in instructions:\n",
-    "    count += v//100\n",
-    "    v = v%100\n",
-    "    position = previous + (v if i == 'R' else -v)\n",
-    "    if position >= 100 or (position <= 0 and previous):\n",
-    "        count += 1\n",
-    "    # print(i, v, previous, position, count)\n",
-    "    previous = position%100\n",
-    "print(count)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "id": "f41c836f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1034, 6166)"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day1():\n",
+    "    instructions = data(1, lambda x: (x[0], int(x[1:])))\n",
+    "    position, part1, part2 = 50, 0, 0\n",
+    "    for i, v in instructions:\n",
+    "        part2 += v//100\n",
+    "        v = v%100\n",
+    "        current = position + (v if i == 'R' else -v)\n",
+    "        if current >= 100 or (current <= 0 and position):\n",
+    "            part2 += 1\n",
+    "        position = current%100\n",
+    "        if not position:\n",
+    "            part1 += 1\n",
+    "    return part1, part2\n",
+    "\n",
+    "day1()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "b5d02c89",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def day1():\n",
-    "    \n",
-    "    return"
+    "def day2():\n",
+    "    return\n",
+    "\n",
+    "day2()"
    ]
   }
  ],
