--- a/2025/2025.ipynb
+++ b/2025/2025.ipynb
@@ -13,6 +13,7 @@
     "from typing import Callable, TypeVar\n",
     "from collections import Counter, deque, defaultdict\n",
     "import itertools\n",
+    "from intervaltree import Interval, IntervalTree\n",
     "from functools import cmp_to_key, cache, lru_cache\n",
     "from concurrent.futures import ThreadPoolExecutor\n",
     "import networkx as nx\n",
@@ -34,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 47,
    "id": "f41c836f",
    "metadata": {},
    "outputs": [
@@ -44,7 +45,7 @@
        "(1034, 6166)"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,8 +60,7 @@
     "        current = position + (v if i == 'R' else -v)\n",
     "        if current >= 100 or (current <= 0 and position):\n",
     "            part2 += 1\n",
-    "        position = current%100\n",
-    "        if not position:\n",
+    "        if not (position := current%100):\n",
     "            part1 += 1\n",
     "    return part1, part2\n",
     "\n",
@@ -69,12 +69,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "id": "b5d02c89",
+   "execution_count": null,
+   "id": "7ffac0f2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def day2():\n",
+    "tree = IntervalTree()\n",
+    "for x in data(2)[0].split(','):\n",
+    "    start, end = x.split('-')\n",
+    "    tree.addi(int(start), int(end)+1, x)\n",
+    "\n",
+    "cap = len(str(tree.end()))//2\n",
+    "result = 0\n",
+    "for i in range(1, 10**cap):\n",
+    "    point = int(str(i)*2)\n",
+    "    if tree.at(point):\n",
+    "        result += point\n",
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "0361b799",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "50793864718"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tree = IntervalTree()\n",
+    "for x in data(2)[0].split(','):\n",
+    "    start, end = x.split('-')\n",
+    "    tree.addi(int(start), int(end)+1, x)\n",
+    "\n",
+    "cap = len(str(tree.end()))//2\n",
+    "tested = set()\n",
+    "result = 0\n",
+    "for i in range(1, 10**cap):\n",
+    "    digits = str(i)\n",
+    "    if digits in tested:\n",
+    "        continue\n",
+    "    point = digits\n",
+    "    while len(point) < cap*2:\n",
+    "        point += digits\n",
+    "        if point in tested:\n",
+    "            continue\n",
+    "        tested.add(point)\n",
+    "        if tree.at(int(point)):\n",
+    "            # print(point)\n",
+    "            result += int(point)\n",
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b5d02c89",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 5\u001b[39m\n\u001b[32m      2\u001b[39m     ranges = data(\u001b[32m2\u001b[39m)[\u001b[32m0\u001b[39m].split(\u001b[33m'\u001b[39m\u001b[33m,\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m      3\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m5\u001b[39m \u001b[43mday2\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 2\u001b[39m, in \u001b[36mday2\u001b[39m\u001b[34m()\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mday2\u001b[39m():\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m     ranges = \u001b[43mdata\u001b[49m(\u001b[32m2\u001b[39m)[\u001b[32m0\u001b[39m].split(\u001b[33m'\u001b[39m\u001b[33m,\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m      3\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m\n",
+      "\u001b[31mNameError\u001b[39m: name 'data' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "def day2():ranges = data(2)[0].split(',')\n",
+    "    \n",
     "    return\n",
     "\n",
     "day2()"
