--- a/2025/2025.ipynb
+++ b/2025/2025.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "3eeef51a",
    "metadata": {},
    "outputs": [],
@@ -117,7 +117,85 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 47,
+   "id": "045c9a8f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jolts = data(3, processors['int_string'])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
+   "id": "c60671d5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = 0\n",
+    "for jolt in jolts:\n",
+    "    first = jolt.index(max(jolt[:-1]))\n",
+    "    second = max(jolt[first+1:])\n",
+    "    result += int(f'{jolt[first]}{second}')\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "7b53ea04",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3121910778619\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = 0\n",
+    "\n",
+    "n = 12\n",
+    "\n",
+    "for jolt in jolts:\n",
+    "    index = 0\n",
+    "    switches = ''\n",
+    "    for i in range(n, 0, -1):\n",
+    "        relevant = jolt[index:-i+1] or jolt[index:]\n",
+    "        value = max(relevant)\n",
+    "        idx = relevant.index(value)\n",
+    "        index += idx+1\n",
+    "        switches += str(value)\n",
+    "    result += int(switches)\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "89693c24",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1]"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[1, 2, 3][:-2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "id": "099e0d58",
    "metadata": {},
    "outputs": [],
