--- a/2025/2025.ipynb
+++ b/2025/2025.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "3eeef51a",
    "metadata": {},
    "outputs": [],
@@ -157,6 +157,111 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a2399ccc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = 0\n",
+    "wall = np.pad(np.array(data(4, list)), 1)\n",
+    "for i, row in enumerate(np.lib.stride_tricks.sliding_window_view(wall, (3, 3))):\n",
+    "    for j, mask in enumerate(row):\n",
+    "        if mask[1, 1] == '@' and np.count_nonzero(mask=='@') <= 4:\n",
+    "            result += 1\n",
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "91722f5c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "not set()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c6d53962",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{(2, 1), (8, 1), (3, 7), (10, 1), (5, 1), (1, 4), (1, 7), (5, 10), (10, 3), (10, 9), (1, 6), (1, 3), (1, 9)}\n",
+      "{(6, 2), (2, 7), (3, 1), (4, 9), (2, 10), (1, 8), (9, 2), (6, 10), (7, 2), (5, 9), (2, 5), (4, 1)}\n",
+      "{(9, 3), (7, 10), (3, 10), (2, 9), (3, 9), (2, 2), (5, 2)}\n",
+      "{(8, 10), (2, 3), (8, 3), (3, 2), (6, 3)}\n",
+      "{(3, 3), (9, 9)}\n",
+      "{(4, 3)}\n",
+      "{(3, 4)}\n",
+      "{(3, 5)}\n",
+      "{(4, 4)}\n",
+      "set()\n",
+      "43\n"
+     ]
+    }
+   ],
+   "source": [
+    "wall = np.pad(np.array(data(4, list)), 1)\n",
+    "def remove_paper(wall):\n",
+    "    remove = set()\n",
+    "    for i, row in enumerate(np.lib.stride_tricks.sliding_window_view(wall, (3, 3))):\n",
+    "        for j, mask in enumerate(row):\n",
+    "            if mask[1, 1] == '@' and np.count_nonzero(mask=='@') <= 4:\n",
+    "                remove.add((i+1, j+1))\n",
+    "    return remove\n",
+    "\n",
+    "to_remove = remove_paper(wall)\n",
+    "print(to_remove)\n",
+    "removed = len(to_remove)\n",
+    "while to_remove:\n",
+    "    for i, j in to_remove:\n",
+    "        wall[i, j] = '.'\n",
+    "    to_remove = remove_paper(wall)\n",
+    "    # print(to_remove)\n",
+    "    # break\n",
+    "    removed += len(to_remove)\n",
+    "print(removed)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "f80fd88d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['.', '.'], dtype='<U1')"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wall.take((0, 0), mode='wrap')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
    "id": "9fbee082",
    "metadata": {},
    "outputs": [],
