--- a/2025/2025.ipynb
+++ b/2025/2025.ipynb
@@ -198,6 +198,55 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 44,
+   "id": "cafe78dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "775"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "inventory = data(5)\n",
+    "\n",
+    "separator = inventory.index('')\n",
+    "ranges = IntervalTree.from_tuples([(int(x.split('-')[0]), int(x.split('-')[-1])+1) for x in inventory[:separator]])\n",
+    "ingredients = [int(x) for x in inventory[separator+1:]]\n",
+    "\n",
+    "sum([bool(ranges.at(i)) for i in ingredients])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "cfba29a4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "350684792662845"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ranges.merge_overlaps()\n",
+    "sum([i.end-i.begin for i in ranges])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 12,
    "id": "9ff83b67",
    "metadata": {},
