--- a/2025/2025.ipynb
+++ b/2025/2025.ipynb
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "id": "cafe78dc",
    "metadata": {},
    "outputs": [
@@ -213,19 +213,11 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "inventory = data(5)\n",
-    "\n",
-    "separator = inventory.index('')\n",
-    "ranges = IntervalTree.from_tuples([(int(x.split('-')[0]), int(x.split('-')[-1])+1) for x in inventory[:separator]])\n",
-    "ingredients = [int(x) for x in inventory[separator+1:]]\n",
-    "\n",
-    "sum([bool(ranges.at(i)) for i in ingredients])"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "id": "cfba29a4",
    "metadata": {},
    "outputs": [
@@ -240,22 +232,53 @@
      "output_type": "execute_result"
     }
    ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "9ff83b67",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(775, 350684792662845)"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "ranges.merge_overlaps()\n",
-    "sum([i.end-i.begin for i in ranges])"
+    "def day5():\n",
+    "    inventory = data(5)\n",
+    "    separator = inventory.index('')\n",
+    "    ranges = IntervalTree.from_tuples([\n",
+    "        (int(x.split('-')[0]), int(x.split('-')[-1])+1) for x in inventory[:separator]\n",
+    "    ])\n",
+    "    ranges.merge_overlaps()\n",
+    "    ingredients = [int(x) for x in inventory[separator+1:]]\n",
+    "\n",
+    "    part1 = sum([bool(ranges.at(i)) for i in ingredients])\n",
+    "    part2 = sum([i.end-i.begin for i in ranges])\n",
+    "    return part1, part2\n",
+    "\n",
+    "day5()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "9ff83b67",
+   "execution_count": 47,
+   "id": "54c66fef",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def day5():\n",
+    "def day6():\n",
     "    return\n",
     "\n",
-    "day5()"
+    "day6()"
    ]
   }
  ],
