--- a/2025/2025.ipynb
+++ b/2025/2025.ipynb
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "9fbee082",
    "metadata": {},
    "outputs": [
@@ -166,7 +166,7 @@
        "(1491, 8722)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,11 +175,13 @@
     "def day4():\n",
     "    wall = np.pad(np.array(data(4, list)), 1)\n",
     "\n",
-    "    def remove_paper(wall):\n",
+    "    def remove_paper(wall, immediate=False):\n",
     "        remove = set()\n",
     "        for i, row in enumerate(np.lib.stride_tricks.sliding_window_view(wall, (3, 3))):\n",
     "            for j, mask in enumerate(row):\n",
     "                if mask[1, 1] == '@' and np.count_nonzero(mask=='@') <= 4:\n",
+    "                    if immediate:\n",
+    "                        wall[i+1, j+1] = '.'\n",
     "                    remove.add((i+1, j+1))\n",
     "        return remove\n",
     "\n",
@@ -188,51 +190,13 @@
     "    while to_remove:\n",
     "        for i, j in to_remove:\n",
     "            wall[i, j] = '.'\n",
-    "        to_remove = remove_paper(wall)\n",
+    "        to_remove = remove_paper(wall, True)\n",
     "        part2 += len(to_remove)\n",
     "\n",
     "    return part1, part1+part2\n",
     "\n",
     "day4()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cafe78dc",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "775"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cfba29a4",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "350684792662845"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -266,6 +230,153 @@
     "    return part1, part2\n",
     "\n",
     "day5()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "id": "1e68193c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "operations = data(6, lambda x: x.split())\n",
+    "# operations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "d9219cd2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5060053676136"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result = 0\n",
+    "for expr in zip(*operations):\n",
+    "    result += eval(expr[-1].join(expr[:-1]))\n",
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "id": "8eca6ca7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "''"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'  '.strip()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "id": "110716f3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9695032684756\n"
+     ]
+    }
+   ],
+   "source": [
+    "numbers = data(6, list)\n",
+    "numbers = np.array(numbers[:-1]).T\n",
+    "ops = list(reversed(operations[-1]))\n",
+    "acc, result = [], 0\n",
+    "for i in [''.join(col) for col in numbers]:\n",
+    "    # print(i, acc)\n",
+    "    if i.strip():\n",
+    "        acc.append(i)\n",
+    "    else:\n",
+    "        op = ops.pop()\n",
+    "        # print(op, acc)\n",
+    "        result += eval(op.join(acc))\n",
+    "        acc = []\n",
+    "\n",
+    "print(result)  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "709816f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "4\n",
+      "8\n",
+      "12\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(len(operations[-1])):\n",
+    "    if operations[-1][i] != ' ':\n",
+    "        print(i)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7e145361",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('1', '4', '6'),\n",
+       " ('2', '5', ' '),\n",
+       " ('3', ' ', '9'),\n",
+       " (' ', '6', '8'),\n",
+       " ('3', '4', ' '),\n",
+       " ('2', ' ', ' '),\n",
+       " ('8', ' ', '2'),\n",
+       " (' ', '3', '1'),\n",
+       " (' ', '8', '5'),\n",
+       " ('5', '7', ' '),\n",
+       " ('1', ' ', '3'),\n",
+       " (' ', '2', '1'),\n",
+       " ('6', '3', '4')]"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "operations = data(6)\n",
+    "operations[-1].split()\n",
+    "list(zip(*operations[:-1]))"
    ]
   },
   {
