--- a/2025/2025.ipynb
+++ b/2025/2025.ipynb
@@ -234,162 +234,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
-   "id": "1e68193c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "operations = data(6, lambda x: x.split())\n",
-    "# operations"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "d9219cd2",
+   "execution_count": 128,
+   "id": "54c66fef",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "5060053676136"
+       "(5060053676136, 9695042567249)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "result = 0\n",
-    "for expr in zip(*operations):\n",
-    "    result += eval(expr[-1].join(expr[:-1]))\n",
-    "result"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 105,
-   "id": "8eca6ca7",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "''"
-      ]
-     },
-     "execution_count": 105,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "'  '.strip()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 113,
-   "id": "110716f3",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "9695032684756\n"
-     ]
-    }
-   ],
-   "source": [
-    "numbers = data(6, list)\n",
-    "numbers = np.array(numbers[:-1]).T\n",
-    "ops = list(reversed(operations[-1]))\n",
-    "acc, result = [], 0\n",
-    "for i in [''.join(col) for col in numbers]:\n",
-    "    # print(i, acc)\n",
-    "    if i.strip():\n",
-    "        acc.append(i)\n",
-    "    else:\n",
-    "        op = ops.pop()\n",
-    "        # print(op, acc)\n",
-    "        result += eval(op.join(acc))\n",
-    "        acc = []\n",
+    "def day6():\n",
+    "    operations = data(6, lambda x: x.split())\n",
+    "    part1 = sum([\n",
+    "        eval(expr[-1].join(expr[:-1]))\n",
+    "        for expr in zip(*operations)\n",
+    "    ])\n",
     "\n",
-    "print(result)  "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "id": "709816f8",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "4\n",
-      "8\n",
-      "12\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i in range(len(operations[-1])):\n",
-    "    if operations[-1][i] != ' ':\n",
-    "        print(i)\n",
-    "\n"
+    "    # Only works on solution\n",
+    "    # Does not work on example input\n",
+    "    raw = data(6, list)\n",
+    "    numbers = np.array(raw[:-1]).T\n",
+    "    ops = list(reversed(operations[-1]))\n",
+    "    current, part2 = [], 0\n",
+    "    for i in [''.join(col) for col in numbers] + [' ']:\n",
+    "        if i.strip():\n",
+    "            current.append(i)\n",
+    "        else:\n",
+    "            op = ops.pop()\n",
+    "            part2 += eval(op.join(current))\n",
+    "            current = []\n",
+    "\n",
+    "    return part1, part2\n",
+    "\n",
+    "day6()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e145361",
+   "id": "b47078bb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('1', '4', '6'),\n",
-       " ('2', '5', ' '),\n",
-       " ('3', ' ', '9'),\n",
-       " (' ', '6', '8'),\n",
-       " ('3', '4', ' '),\n",
-       " ('2', ' ', ' '),\n",
-       " ('8', ' ', '2'),\n",
-       " (' ', '3', '1'),\n",
-       " (' ', '8', '5'),\n",
-       " ('5', '7', ' '),\n",
-       " ('1', ' ', '3'),\n",
-       " (' ', '2', '1'),\n",
-       " ('6', '3', '4')]"
+       "<function __main__.day7()>"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 129,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "operations = data(6)\n",
-    "operations[-1].split()\n",
-    "list(zip(*operations[:-1]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "id": "54c66fef",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def day6():\n",
+    "def day7():\n",
     "    return\n",
     "\n",
-    "day6()"
+    "day7()"
    ]
   }
  ],
