--- a/2025/2025.ipynb
+++ b/2025/2025.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 1,
    "id": "3eeef51a",
    "metadata": {},
    "outputs": [],
@@ -280,17 +280,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 7,
    "id": "b47078bb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1651, 108924003331749)"
+       "(21, 40)"
       ]
      },
-     "execution_count": 167,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,9 +310,9 @@
     "    while frontier:\n",
     "        y, x, source = heapq.heappop(frontier)\n",
     "        if (y, x) in visited:\n",
-    "            visited[(y, x)].append(source) # Probably should be able to count directly instead of keeping track of them\n",
+    "            visited[(y, x)] += visited[source]\n",
     "            continue\n",
-    "        visited[(y, x)] = [source]\n",
+    "        visited[(y, x)] = visited.get(source) or 1\n",
     "\n",
     "        split = bisect.bisect_left(splits[x], y)\n",
     "        if split < len(splits[x]):\n",
@@ -323,15 +323,7 @@
     "        else:\n",
     "            ends.add((y, x))\n",
     "\n",
-    "\n",
-    "    @lru_cache()\n",
-    "    def contributions(x):\n",
-    "        if not x[0]:\n",
-    "            return 1\n",
-    "        return sum(contributions(i) for i in visited[x])\n",
-    "    part2 = sum(contributions(i) for i in ends)\n",
-    "\n",
-    "    return len(splitted), part2\n",
+    "    return len(splitted), sum(visited[i] for i in ends)\n",
     "\n",
     "day7()"
    ]
