--- a/2025/2025.ipynb
+++ b/2025/2025.ipynb
@@ -431,19 +431,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4782896435 (84177, 84975) (14319, 16511) False\n"
+      "1540060480 True\n"
      ]
     },
     {
      "data": {
       "image/svg+xml": [
-       "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"300\" height=\"300\" viewBox=\"11524.68 13716.68 75446.64000000001 74052.64000000001\" preserveAspectRatio=\"xMinYMin meet\"><g transform=\"matrix(1,0,0,-1,0,101486.0)\"><path fill-rule=\"evenodd\" fill=\"#66cc99\" stroke=\"#555555\" stroke-width=\"502.9776000000001\" opacity=\"0.6\" d=\"M 14319.0,16511.0 L 14319.0,84975.0 L 84177.0,84975.0 L 84177.0,16511.0 L 14319.0,16511.0 z\" /></g></svg>"
+       "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"300\" height=\"300\" viewBox=\"2238.24 46595.24 95897.51999999999 51540.52\" preserveAspectRatio=\"xMinYMin meet\"><g transform=\"matrix(1,0,0,-1,0,144731.0)\"><path fill-rule=\"evenodd\" fill=\"#66cc99\" stroke=\"#555555\" stroke-width=\"639.3168\" opacity=\"0.6\" d=\"M 5790.0,67490.0 L 5790.0,50147.0 L 94584.0,50147.0 L 67490.0,94584.0 L 5790.0,67490.0 z\" /></g></svg>"
       ],
       "text/plain": [
-       "<POLYGON ((14319 16511, 14319 84975, 84177 84975, 84177 16511, 14319 16511))>"
+       "<POLYGON ((5790 67490, 5790 50147, 94584 50147, 67490 94584, 5790 67490))>"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 150,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,12 +451,14 @@
    "source": [
     "for i in distances:\n",
     "    d, a, b = i\n",
+    "    # d, (y1, x1), (y2, x2) = i\n",
     "\n",
-    "    y1, y2, x1, x2 = min(a[0], b[0]), max(a[0], b[0]), min(a[1], b[1]), max(a[1], b[1])\n",
+    "    # rectangle = Polygon([(y1, x1), (y1, x2), (y2, x2), (y2, x1)])\n",
     "\n",
-    "    rectangle = Polygon([(y1, x1), (y1, x2), (y2, x2), (y2, x1)])\n",
+    "    rectangle = Polygon([(a[0], a[1]), (a[0], b[1]), (b[0], b[1]), (b[0], a[1])])\n",
+    "\n",
     "    if polygon.contains(rectangle):\n",
-    "        print(d, a, b, polygon.contains(rectangle))\n",
+    "        print(d, polygon.contains(rectangle))\n",
     "        break\n",
     "rectangle"
    ]
